# tenann

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  build.sh  env.sh  package.sh  run_ut.sh
cmake/: tenann-config.cmake.in
docs/: indexes.md
docs/release_notes/: release-0.0.md  release-0.1.md  release-0.2.md  release-0.3.md  release-0.4.md  v1.0.0-release.md
examples/: CMakeLists.txt  ab_test.cc  cosine_example.cc  error_handling_example.cc  faiss_hnsw_example.cc  helloworld_example.cc  helloworld_exmaple.cc  index_cache_example.cc  index_factory_example.cc  index_ivfpq_example.cc  ivfpq_range_search_example.cc  meta_example.cc  multi_threads_example.cc  range_evaluator_example.cc  stress_tool.cc  typed_seq_view_example.cc
python_bindings/: CMakeLists.txt  bindings.cc  faiss_hnsw_example.py  test_index_HNSW.py  test_index_IVFPQ.py
tenann/: CMakeLists.txt  version.cc  version.h
tenann/bench/: evaluator.cc  evaluator.h  range_search_evaluator.cc  range_search_evaluator.h
tenann/builder/: faiss_hnsw_ann_index_builder.cc  faiss_hnsw_ann_index_builder.h  faiss_hnsw_index_builder.cc  faiss_hnsw_index_builder.h  faiss_index_builder.cc  faiss_index_builder.h  faiss_index_builder_with_buffer.cc  faiss_index_builder_with_buffer.h  faiss_ivf_pq_index_builder.cc  faiss_ivf_pq_index_builder.h  index_builder.cc  index_builder.h
tenann/common/: compiler_util.h  error.cc  error.h  json.h  logging.cc  logging.h  macros.h  parameters.h  primitive_type.h  seq_view.h  type_traits.h  typed_seq_view.h
tenann/factory/: ann_searcher_factory.cc  ann_searcher_factory.h  factory_register.h  index_factory.cc  index_factory.h  index_factory_trait.cc  index_factory_trait.h
tenann/index/: custom_ivfpq_reader.cc  custom_ivfpq_reader.h  custom_ivfpq_writer.cc  custom_ivfpq_writer.h  faiss_hnsw_ann_index_reader.cc  faiss_hnsw_ann_index_reader.h  faiss_hnsw_ann_index_writer.cc  faiss_hnsw_ann_index_writer.h  faiss_hnsw_index_reader.cc  faiss_hnsw_index_reader.h  faiss_hnsw_index_writer.cc  faiss_hnsw_index_writer.h  faiss_index_reader.cc  faiss_index_reader.h  faiss_index_writer.cc  faiss_index_writer.h  index.cc  index.h  index_cache.cc  index_cache.h  index_ivfpq_reader.cc  index_ivfpq_reader.h  index_ivfpq_util.h  index_ivfpq_writer.cc  index_ivfpq_writer.h  index_reader.cc  index_reader.h  index_str.h  index_writer.cc  index_writer.h  parameter_serde.h  parameters.h
tenann/index/internal/: IndexIVFPQ.cpp  IndexIVFPQ.h  custom_ivfpq.cc  custom_ivfpq.h  faiss_index_util.h  index_ivfpq.cc  index_ivfpq.h
tenann/scanner/: index_scanner.cc  index_scanner.h
tenann/searcher/: ann_filter.cc  ann_filter.h  ann_searcher.cc  ann_searcher.h  faiss_hnsw_ann_searcher.cc  faiss_hnsw_ann_searcher.h  faiss_ivf_pq_ann_searcher.cc  faiss_ivf_pq_ann_searcher.h  id_filter.cc  id_filter.h  search_parameters.h  searcher.cc  searcher.h
tenann/searcher/internal/: ann_filter_adapter.h  id_filter_adapter.h
tenann/store/: index_cache.cc  index_cache.h  index_meta.cc  index_meta.h  index_type.h  lru_cache.cc  lru_cache.h
tenann/streamer/: index_streamer.cc  index_streamer.h
tenann/util/: bruteforce.h  bruteforce_ann.h  defer.h  distance_util.h  filesystem.h  metric_types.h  object_pool.h  pretty_printer.h  random.h  runtime_profile.cc  runtime_profile.h  runtime_profile_macros.h  spinlock.cc  spinlock.h  stop_watch.h  template_util.h  threads.cc  threads.h
test/: CMakeLists.txt  faiss_test_base.cc  faiss_test_base.h  tenann_test.cc  test_base.cc  test_base.h
test/builder/: test_faiss_hnsw_index_builder.cc  test_faiss_index_builder.cc  test_faiss_ivf_pq_index_builder.cc
test/index/: test_custom_ivfpq.cc  test_index_ivfpq.cc  test_internal_tenann_ivfpq.cc
test/searcher/: test_faiss_hnsw_ann_searcher.cc  test_faiss_ivf_pq_ann_searcher.cc  test_ivf_pq_range_search.cc  test_range_search.cc
test/store/: test_index_meta.cc  test_lru_cache.cc
test/util/: test_bruteforce_ann.cc  test_bruteforce_search.cc  test_distance_util.cc  test_runtime_profile.cc
tools/: README  index_file_tool.py
